new_tests/semantics/scope/bad/017_ED3.cm

def WEEKS type = { MON = MON, TUES = 2 }
